--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -21,16 +21,22 @@ body {
   flex-flow: column;
   padding: 10px 10px 10px 10px;
   position: fixed;
-  width: 320px;
+  max-width: 320px;
+  /* margin-top: -55px; */
+  height: 100%;
 }
 
 .header {
-  color: rgb(209, 209, 209);
+  color: rgb(18, 18, 20);
   display: flex;
   flex-flow: column;
   font-family: Ubuntu;
   justify-content: space-between;
   padding: 0 0 10px 0;
+}
+
+.main {
+  margin-top: 10px;
 }
 
 .content {
@@ -42,6 +48,7 @@ body {
   color: rgb(209, 209, 209);
   display: flex;
   justify-content: center;
+  margin-top: 60px;
 }
 
 .cover h2, h3, h4, ul {
