--- a/src/css/Aside.css
+++ b/src/css/Aside.css
@@ -14,8 +14,9 @@
 
 .aside-container p {
   font-family: Tekton, Ubuntu;
-  padding: 10px 0px;
-  /* font-size: 2vmax; */
+  font-size: larger;
+  margin-bottom: 0 !important;
+  padding: 10px 0;
 }
 
 .nav-container {
@@ -24,7 +25,6 @@
   justify-content: space-between;
   margin: 0;
   padding: 0 10px;
-  /* width: 100%; */
 }
 
 .social-icon img {
@@ -42,6 +42,6 @@
 
 .profile {
   border-radius: 140px;
-  min-width: 10vw;
   max-width: 20vh;
+  min-width: 10vw;
 }
