--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,31 +1,194 @@
 .header-container {
   align-content: center;
-  display: flex;
-  height: 100%;
   width: auto;
 }
 
 .header-container nav {
-  background-color:rgb(18, 18, 20);
-  border-radius: 30px;
   display: flex;
   justify-content: space-between;
   text-decoration: none;
-  width: 100%;
 }
 
 .header-container a {
-  align-items: center;
-  display: flex;
   color: aliceblue;
-  font-size: 0,5vh;
-  height: 100%;
-  margin: 0 auto;
-  padding: 10px;
 }
 
 .header-container a:hover {
-  background-color:rgb(20, 20, 41);
-  border-radius: 30px;
+  background-color:#07063f;
+  color: aliceblue;
   text-decoration: none;
+}
+
+header {
+  background: rgb(0, 0, 0);
+  left: 0;
+  min-height: 60px;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 2;
+}
+
+header ul {
+  padding: 15px 10px 0 0;
+}
+
+header li {
+  border-left: 1px solid #ccc;
+}
+
+header li:first-child {
+  border: none;
+}
+
+header li a {
+  -webkit-transition: all 300ms ease;
+  color: #999;
+  display: block;
+  font-size: 16px;
+  line-height: 30px;
+  padding: 0 10px;
+  text-decoration: none;
+  transition: all 300ms ease;
+}
+
+header li a:hover {
+  color: #333;
+}
+
+input#control-nav {
+  left: -9999px;
+  opacity: 0;
+  position: absolute;
+  visibility: hidden;
+}
+
+/* lists */
+.list-full,
+.list-full li,
+.list-auto,
+.list-auto li {
+  display: block;
+  float: left;
+  position: relative;
+  width: 100%;
+}
+
+.list-auto,
+.list-auto li {
+  width: auto;
+}
+
+/* floats */
+.float-l {
+  float: left;
+}
+
+.float-r {
+  float: right;
+}
+
+@media screen and (max-width: 767px) {
+  header nav {
+    -ms-transform: translate(100%, 0);
+    -webkit-transform: translate(100%, 0);
+    -webkit-transition: all 500ms ease;
+    background: rgb(36, 35, 41);
+    border-left: 1px solid #ccc;
+    bottom: 0;
+    overflow-x: auto;
+    position: fixed;
+    right: 0;
+    top: 0;
+    transform: translate(100%, 0);
+    transition: all 500ms ease;
+    width: 250px;
+    z-index: 2;
+  }
+
+  header ul.list-auto {
+    padding: 0;
+  }
+
+  header ul.list-auto li {
+    border-width: 0 0 1px;
+    border: solid #ccc;
+    width: 100%;
+  }
+
+  header li a {
+    padding: 15px 10px;
+  }
+
+  header li a:hover {
+    background-color: #ccc;
+  }
+
+  .control-nav { /* label icon */
+    border-width: 3px 0;
+    border: solid rgb(152, 167, 226);
+    cursor: pointer;
+    display: block;
+    padding: 5px 0;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    z-index: 2;
+  }
+
+  .control-nav:before {
+    background: rgb(79, 79, 90);
+    content: "";
+    display: block;
+    height: 3px;
+  }
+
+  .control-nav-close { /* label layer */
+    -ms-transform: translate(100%, 0);
+    -webkit-transform: translate(100%, 0);
+    -webkit-transition: all 500ms ease;
+    background: rgba(0,0,0,0.4);
+    bottom: 0;
+    display: block;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    transform: translate(100%, 0);
+    transition: all 500ms ease;
+    z-index: 1;
+  }
+
+  /* checked nav */
+  input#control-nav {
+    display: block;
+  }
+
+  input#control-nav:focus ~ .control-nav {
+    border-color: #000;
+    box-shadow: 0px 0px 9px rgba(0,0,0,0.3);
+  }
+
+  input#control-nav:focus ~ .control-nav:before {
+    background: #000;
+  }
+
+  input#control-nav:checked ~ nav,
+  input#control-nav:checked ~ .control-nav-close {
+    -ms-transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
+    transform: translate(0, 0);
+  }
+
+  header+section {
+    padding-top: 80px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header h1 {
+    font-size: 20px;
+    line-height: 40px;
+  }
 }
