--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
 body {
+  background-color: #000325;
+  background-image: linear-gradient(180deg, #000000 0%, #09090c 50%, #000000 100%);
   font-family: Ubuntu;
   font-size: 16px;
-  margin: auto;
-  /* min-width: 840px; */
+  margin: 0 auto;
+  max-width: 100%;
 }
 
 a:link {
