--- a/src/css/Aside.css
+++ b/src/css/Aside.css
@@ -1,5 +1,15 @@
+.aside {
+  margin-top: 0;
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  max-width: 320px;
+  padding: 10px 10px 10px 10px;
+  position: fixed;
+}
+
 .aside-container {
-  color: rgb(209, 209, 209, 209);
+  color: rgb(209, 209, 209);
   height: 100%;
   padding: 5px 5px;
   text-align: center;
@@ -27,9 +37,8 @@
   padding: 0 10px;
 }
 
-.social-icon img {
-  height: 10px;
-  width: 10px !important;
+.nav-container img {
+  width: 40px !important;
 }
 
 .nav-title p {
@@ -45,3 +54,4 @@
   max-width: 20vh;
   min-width: 10vw;
 }
+
