--- a/src/css/Aside.css
+++ b/src/css/Aside.css
@@ -34,11 +34,11 @@
   flex-flow: nowrap;
   justify-content: space-between;
   margin: 0;
-  padding: 0 10px;
+  padding: 10px 10px;
 }
 
 .nav-container img {
-  width: 40px !important;
+  width: 50px !important;
 }
 
 .nav-title p {
