--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@ body {
 }
 
 a:link {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 a:hover {
-  font-weight: bold;
+  font-weight: bold !important;
 }
