--- a/src/css/Carousel.css
+++ b/src/css/Carousel.css
@@ -31,3 +31,11 @@
   /* width: 800px !important; */
   /* display: flex !important; */
 /* } */
+
+.carousel-caption {
+  z-index: 0;
+}
+
+.carousel-indicators {
+  z-index: 1;
+}
