--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,3 +1,13 @@
+.header-logo {
+  z-index: 3;
+  width: 70px;
+  margin: 10px;
+}
+
+.header-logo img {
+  width: 70px;
+}
+
 .project-list {
   margin: 60px auto;
 }
@@ -26,13 +36,10 @@
   padding: 20px 20px;
 }
 
-.project-grid-item a {
+.project-grid-item-imagem {
+  display: flex;
   justify-content: center;
-  margin: 20px;
-  padding: 20px 20px;
-}
-
-.project-grid-item img {
+  margin: 0 auto;
   width: 80%;
 }
 
@@ -48,4 +55,9 @@
 .project-content,
 .task-content {
   color: rgb(209, 209, 209);
+}
+
+.project {
+  display: flex;
+  justify-content: center;
 }
