--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -14,7 +14,7 @@
 
 .project-list h1 {
   color: rgb(209, 209, 209);
-  font-size: 2vw;
+  font-size: min(max(16px, 4vw), 22px);
   justify-content: center;
   margin: 0 auto;
   text-align: center;
