--- a/src/assets/styles/Aside.css
+++ b/src/assets/styles/Aside.css
@@ -32,7 +32,7 @@
 .nav-container {
   display: flex;
   flex-flow: nowrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   margin: 0;
   padding: 10px 10px;
 }
@@ -54,4 +54,3 @@
   max-width: 20vh;
   min-width: 10vw;
 }
-
