--- a/src/assets/old-react/styles/Mobile.css
+++ b/src/assets/old-react/styles/Mobile.css
@@ -25,11 +25,13 @@
     width: 100%;
   }
 
-  header li a {
+  header li a,
+  header li div {
     padding: 15px 10px;
   }
 
-  .control-nav { /* label icon */
+  .control-nav {
+    /* label icon */
     border: solid rgb(152, 167, 226);
     border-width: 3px 0;
     cursor: pointer;
@@ -44,16 +46,17 @@
 
   .control-nav:before {
     background: rgb(79, 79, 90);
-    content: "";
+    content: '';
     display: block;
     height: 3px;
   }
 
-  .control-nav-close { /* label layer */
+  .control-nav-close {
+    /* label layer */
     -ms-transform: translate(100%, 0);
     -webkit-transform: translate(100%, 0);
     -webkit-transition: all 500ms ease;
-    background: rgba(0,0,0,0.4);
+    background: rgba(0, 0, 0, 0.4);
     bottom: 0;
     display: block;
     left: 0;
@@ -72,7 +75,7 @@
 
   input#control-nav:focus ~ .control-nav {
     border-color: #000;
-    box-shadow: 0px 0px 9px rgba(0,0,0,0.3);
+    box-shadow: 0 0 9px rgba(0, 0, 0, 0.3);
   }
 
   input#control-nav:focus ~ .control-nav:before {
@@ -86,7 +89,7 @@
     transform: translate(0, 0);
   }
 
-  header+section {
+  header + section {
     padding-top: 80px;
   }
 
@@ -158,7 +161,10 @@
     margin-top: 60px;
   }
 
-  .cover h2, h3, h4, ul {
+  .cover h2,
+  h3,
+  h4,
+  ul {
     color: rgb(209, 209, 209);
   }
 
